add background image and create static folder in src

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@ body {
   font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  min-height: 100vh;
+  background-image: url('./static/images/IMG_3823.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 code {
