add css to all files, style background image

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
+body {
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  min-height: 100vh;
+  background-image: url('./static/images/IMG_3823.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+
+
 
 .App-logo {
   height: 40vmin;
